[18.05.03 16:31 2차 보완] join js작성완료

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.2.0.Final</version>
 		</dependency>
+		
+		<!-- jackson ajax하려면 추가해줘야함-->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.1.1</version>
+		</dependency>
 
 	</dependencies>
 
